--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsnd --respawn ./src/server.ts"
+  },
   "dependencies": {
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
@@ -11,3 +16,4 @@
     "@types/signale": "^1.4.7"
   }
 }
+ 
