--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-
+  "name": "API-HEXAGONAL-223227",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn ./src/server.ts"
+    "dev": "ts-node-dev ./src/index.ts"
   },
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
@@ -13,7 +18,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/signale": "^1.4.7"
+    "@types/signale": "^1.4.7",
+    "ts-node-dev": "^2.0.0"
   }
 }
  
