--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.10.4",
+    "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
@@ -17,9 +20,9 @@
     "signale": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/signale": "^1.4.7",
     "ts-node-dev": "^2.0.0"
   }
 }
- 
