--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/amqplib": "^0.10.4",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.17",
+    "@types/socket.io-client": "^3.0.0",
     "amqplib": "^0.10.3",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "mysql2": "^3.8.0",
-    "signale": "^1.4.0"
+    "signale": "^1.4.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
