--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST = 'localhost'
-DB_USER = 'root'
+DB_HOST = 'servidor-as.c5mcug0w45el.us-east-1.rds.amazonaws.com'
+DB_USER = 'admin'
 DB_PASSWORD = 'LgSc06042004'
 DB_DATABASE = 'servidor'
 
