--- a/.env
+++ b/.env
@@ -10,5 +10,6 @@ AMQP_PASSWORD = 'LGSC06042004'
 AMQP_PORT = 5672
 AMQP_URL = 'amqps://Gaboneil:LGSC06042004@52.21.114.121/'
 AMQP_EXCH = 'upchiapas.int'
+AMQP_ROUTINGKEY = 'esp32'
 
 AMQP_SERVER = 'amqps://ekuqfepy:ZOF_xj0F2oLUm8ZZQKoy8OvFRr-FSjid@shrimp.rmq.cloudamqp.com/ekuqfepy' 
